--- a/Projects/Day 4/Freecodecamp/styles.css
+++ b/Projects/Day 4/Freecodecamp/styles.css
@@ -29,18 +29,37 @@ h1 {
 }
 
 .sleeve {
-    width: 110px;
+    width: 130px;
     height: 25px;
     background-color: white;
     background-color: rgba(255, 255, 255, 50%);
     border-left: 10px double rgba(0, 0, 0, 75%);
+    border-right: 10px double rgba(0, 0, 0, 75%);
 }
 
 .cap {
-    width: 60px;
+    width: 30px;
     height: 25px;
 }
 
 .cap, .sleeve{
     display: inline-block;
+}
+
+.r{
+    position: absolute;
+    left: 254px;
+    top: 88px;
+}
+
+.g{
+    position: absolute;
+    left: 245px;
+    top: 123px;
+}
+
+.b{
+    position: absolute;
+    left: 251px;
+    top: 158px;
 }
